pkg/awsvpc/examples/out/explain_out/from_external_public_subnet_all_vpcs_explain_detail.txt
Explaining connectivity from 147.235.0.0/16 to 10.240.0.96 within mixed
Interpreted source(s): 147.235.0.0/16 (Public Internet)
Interpreted destination(s): p3[10.240.0.96]
=======================================================================

Connections from Public Internet 147.235.0.0/16 to p3[10.240.0.96]: protocol: TCP dst-ports: 9080
	However, TCP response is blocked for: src-ports: 1-1024,5001-65535 dst-ports: 9080

Path:
	Public Internet 147.235.0.0/16 -> 
	InternetGateway internet_gw -> 
	subnet public -> network ACL acl1 -> security group GroupId:35 -> p3[10.240.0.96]


Details:
~~~~~~~~
Path is enabled; The relevant rules are:
	Ingress:
		network ACL acl1 allows connection with the following allow and deny rules
			ruleNumber: 10, action: allow, direction: inbound, cidr: 147.235.0.0/16, protocol: tcp, dstPorts: 9080-9080
			ruleNumber: 32767, action: deny, direction: inbound, cidr: 0.0.0.0/0, protocol: all
		security group GroupId:35 allows connection with the following allow rules
			Inbound index: 0, direction: inbound, target: 147.0.0.0/8, protocol: tcp, dstPorts: 0-65535
		security group GroupId:9 has no relevant rules
		Ingress from public internet is allowed since subnet public is public

TCP response is partly enabled; The relevant rules are:
	Egress:
		network ACL acl1 partly allows connection with the following allow and deny rules
			ruleNumber: 10, action: allow, direction: outbound, cidr: 147.235.0.0/16, protocol: tcp, dstPorts: 1025-5000
			ruleNumber: 32767, action: deny, direction: outbound, cidr: 0.0.0.0/0, protocol: all

------------------------------------------------------------------------------------------------------------------------
