pkg/awsvpc/examples/out/explain_out/ip_to_ip_all_vpcs_explain_detail.txt
Explaining connectivity from 10.240.40.217 to 10.240.20.43 within vpc0
Interpreted source: dashboard[10.240.40.217]
Interpreted destination: app2[10.240.20.43]
======================================================================

Connections from dashboard[10.240.40.217] to app2[10.240.20.43]: All Connections

Path:
	dashboard[10.240.40.217] -> security group GroupName:51 -> network ACL NetworkAclId:65 -> subnet dashoard -> 
	subnet application -> network ACL NetworkAclId:65 -> security group GroupName:43 -> app2[10.240.20.43]


Details:
~~~~~~~~
Path is enabled; The relevant rules are:
	Egress:
		security group GroupName:51 allows connection with the following allow rules
			IpPermissionsEgress's index: 0, direction: outbound,  conns: protocol: all, target: 0.0.0.0/0
		network ACL NetworkAclId:65 allows connection with the following allow rules
			index: 0, direction: outbound ,cidr: 0.0.0.0/0, conn: all, action: allow

	Ingress:
		network ACL NetworkAclId:65 allows connection with the following allow rules
			index: 1, direction: inbound ,cidr: 0.0.0.0/0, conn: all, action: allow
		security group GroupName:43 allows connection with the following allow rules
			IpPermissions's index: 0, direction: inbound,  conns: protocol: all, target: 10.240.40.0/24

TCP response is enabled; The relevant rules are:
	Egress:
		network ACL NetworkAclId:65 allows connection with the following allow rules
			index: 0, direction: outbound ,cidr: 0.0.0.0/0, conn: all, action: allow

	Ingress:
		network ACL NetworkAclId:65 allows connection with the following allow rules
			index: 1, direction: inbound ,cidr: 0.0.0.0/0, conn: all, action: allow

------------------------------------------------------------------------------------------------------------------------
