pkg/awsvpc/examples/out/explain_out/same_subnet_partial_connection_all_vpcs_explain_detail.txt
Explaining connectivity from 10.240.32.122 to 10.240.32.91 within mixed
Interpreted source: q2[10.240.32.122]
Interpreted destination: q1[10.240.32.91]
=======================================================================

Connections from q2[10.240.32.122] to q1[10.240.32.91]: protocol: UDP

Path:
	q2[10.240.32.122] -> security group GroupId:9 -> 
	security group GroupId:15 -> q1[10.240.32.91]


Details:
~~~~~~~~
Path is enabled; The relevant rules are:
	Egress:
		security group GroupId:9 allows connection with the following allow rules
			Outbound index: 0, direction: outbound, target: 10.240.0.0/18, protocol: all

	Ingress:
		security group GroupId:15 allows connection with the following allow rules
			Inbound index: 0, direction: inbound, target: 0.0.0.0/0, protocol: udp, dstPorts: 0-65535

------------------------------------------------------------------------------------------------------------------------
