pkg/awsvpc/examples/out/explain_out/to_external_blocked_only_private_subnet_all_vpcs_explain_detail.txt
Explaining connectivity from 10.240.20.245 to 161.26.0.0 within vpc0
Interpreted source(s): app1[10.240.20.245]
Interpreted destination(s): 161.26.0.0 (external)
====================================================================

No connections from app1[10.240.20.245] to Public Internet 161.26.0.0/32;
	connection is blocked at egress

External traffic via InternetGateway: internet_gw
Egress: private subnet application denies connection; security group GroupId:35 allows connection; security group GroupId:42 does not allow connection; network ACL NetworkAclId:65 allows connection

Path:
	app1[10.240.20.245] -> security group GroupId:35 -> network ACL NetworkAclId:65 -> | subnet application |


Details:
~~~~~~~~
Path is disabled; The relevant rules are:
	Egress:
		Egress to public internet is blocked since subnet application is private
		security group GroupId:35 allows connection with the following allow rules
			Outbound index: 0, direction: outbound, target: 0.0.0.0/0, protocol: all
		security group GroupId:42 has no relevant allow rules
		network ACL NetworkAclId:65 allows connection with the following allow rules
			ruleNumber: 100, action: allow, direction: outbound, cidr: 0.0.0.0/0, protocol: all

------------------------------------------------------------------------------------------------------------------------
