pkg/awsvpc/examples/out/explain_out/to_external_private_subnet_all_vpcs_explain_detail.txt
Explaining connectivity from 10.240.20.245 to 161.26.0.0 within vpc0
Interpreted source: app1[10.240.20.245]
Interpreted destination: 161.26.0.0 (external)
====================================================================

No connections from app1[10.240.20.245] to Public Internet 161.26.0.0/32;
connection is blocked by egress

External traffic via InternetGateway: internet_gw
Egress: private subnet application denies connection; security group GroupId:42 blocks connection; network ACL NetworkAclId:65 allows connection

Path:
	app1[10.240.20.245] -> | security group GroupId:42 |


Details:
~~~~~~~~
Path is disabled; The relevant rules are:
	Egress:
		external outbound connection is denied since subnet application is private
		security group GroupId:42 has no relevant allow rules
		network ACL NetworkAclId:65 allows connection with the following allow rules
			ruleNumber: 100, direction: outbound ,cidr: 0.0.0.0/0, action: allow, conn: all

------------------------------------------------------------------------------------------------------------------------
