pkg/awsvpc/examples/out/explain_out/to_external_public_subnet_all_vpcs_explain_detail.txt
Explaining connectivity from 10.240.10.42 to 161.26.0.0 within vpc0
Interpreted source: proxy[10.240.10.42]
Interpreted destination: 161.26.0.0 (external)
===================================================================

Connections from proxy[10.240.10.42] to Public Internet 161.26.0.0/32: All Connections

Path:
	proxy[10.240.10.42] -> security group GroupId:35 -> network ACL NetworkAclId:65 -> subnet edge -> 
	InternetGateway internet_gw -> 
	Public Internet 161.26.0.0/32


Details:
~~~~~~~~
Path is enabled; The relevant rules are:
	Egress:
		traffic from proxy[10.240.10.42] to Public Internet [161.26.0.0/32] is allowed, since subnet edge is public
		security group GroupId:35 allows connection with the following allow rules
			Outbound index: 0, direction: outbound, target: 0.0.0.0/0, conns: protocol: all
		network ACL NetworkAclId:65 allows connection with the following allow rules
			ruleNumber: 100, direction: outbound ,cidr: 0.0.0.0/0, action: allow, conn: all

TCP response is enabled; The relevant rules are:
	Ingress:
		network ACL NetworkAclId:65 allows connection with the following allow rules
			ruleNumber: 100, direction: inbound ,cidr: 0.0.0.0/0, action: allow, conn: all

------------------------------------------------------------------------------------------------------------------------
